tests/netperf/wwu/udp_100/outgoing.txt
root@cf418-nel-02 ~/ipfwd# netperf -c -C -l 30 -H cf498-nel-01 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to cf498-nel-01.cs.wwu.edu () port 0 AF_INET : histogram : interval : dirty data : demo
Socket  Message  Elapsed      Messages                   CPU      Service
Size    Size     Time         Okay Errors   Throughput   Util     Demand
bytes   bytes    secs            #      #   10^6bits/sec % CC     us/KB

  9216    9216   30.09      387277 6810073      948.8     13.10    9.051
 42080           30.09           0               0.0     2.53     1.745

root@cf418-nel-02 ~/ipfwd#


root@cf418-nel-02 ~/i/ipfwd# ./ipfwd 1 1.0
[ipfwd] starting
current:  2.295%, error:  2.3%, probability:  1.000%
current:  3.107%, error:  0.8%, probability:  1.000%
current:  3.857%, error:  0.8%, probability:  1.000%
current:  4.547%, error:  0.7%, probability:  1.000%
current:  5.182%, error:  0.6%, probability:  1.000%
current:  5.768%, error:  0.6%, probability:  1.000%
current:  6.305%, error:  0.5%, probability:  1.000%
current:  5.798%, error:  0.5%, probability:  1.000%
current:  5.328%, error:  0.5%, probability:  1.000%
^C~root@cf418-nel-02 ~/i/ipfwd#
